--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,2 +1,4 @@
 @import "../libs/bootstrap/css/bootstrap-reboot"
 @import "../libs/bootstrap/css/bootstrap-grid"
+@import "../libs/glightbox/css/glightbox.css"
+@import "../libs/slick/slick.css"
