--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -6,20 +6,77 @@
     font-family: 'Jomolhari', serif
 
 
+
 // === common ===    
 body
     background-color: #111111  
-    color: #ffffff  
+    color: #ffffff 
+    background-repeat: no-repeat
+
+.horizont-line
+    width: 100%
+    height: 1px
+    background-color: #ffffff
+
+.wrapper
+    min-height: 100vh
+    display: grid
+    grid-template-rows: auto 1fr auto
+
+.social   
+    margin: 0
+    padding: 0
+    list-style-type: none
+    position: fixed
+    z-index: 999999
+    right: 0
+    top: 25%
+
+.mobile-menu__content
+    display: none
+
+.breadcrumbs
+    padding-top: 121px
+    .kama_breadcrumbs
+        a
+            @include font-jost
+            color: #ffffff
+            font-size: 12px
+            font-style: normal
+            font-weight: 400
+            line-height: 17px
+            letter-spacing: 0em
+        .kb_sep    
+            margin-right: 15px
+            margin-left: 15px
+        .kb_title
+            @include font-jost
+            color: #ffffff
+            font-size: 12px
+            font-style: normal
+            font-weight: 400
+            line-height: 17px
+            letter-spacing: 0em
+            position: relative
+            &::before
+                content: ""
+                width: 100%
+                height: 1px
+                position: absolute
+                background-color: #fff
+                bottom: 2px
+            
+
 .section-inner    
     max-width: 1600px
-    padding-left: 15px
-    padding-right: 15px
+    padding-left: 10px
+    padding-right: 10px
     margin: 0 auto
 
 .main-btn
     position: relative
     overflow: hidden
-    display: inline-block
+    display: inline-table
     border: 1px solid #fff
     color: #fff
     font-size: 12px
@@ -50,18 +107,35 @@ body
         color: #111111
         text-decoration: none
         &::before
-            transform: scaleX(1)    
+            transform: scaleX(1)  
+    &.change-data
+        font-size: 10px
+        width: 214px
+    &.price-request
+        margin-right: 16px
+    &.in-footer
+        margin-bottom: 25px
+    &.mobile-menu__btn
+        font-size: 10px
+        padding-right: 10px
+        padding-left: 10px
+        padding-bottom: 6px
+        padding-top: 6px
 
 // === common END ===    
 
 // === header ===
-
+.header
+    background-color: #000000
+.header-mobile
+    display: none
 .header-top
-    display: flex
-    height: 46px
-    justify-content: space-between
-    align-items: center
+    display: grid
+    grid-template-columns: 600px auto 1fr
+    padding-top: 16px
+    padding-bottom: 19px
     &__left
+        flex-basis: 300px
         &-phone
             @include font-jost
 
@@ -70,7 +144,7 @@ body
             line-height: 26px
             letter-spacing: 0em
             color: #ffffff 
-            margin-right: 25px   
+            margin-right: 20px   
         &-mail
             @include font-jost
 
@@ -79,6 +153,7 @@ body
             line-height: 26px
             letter-spacing: 0em
             color: #ffffff
+            margin-right: 20px 
         &-phone,
         &-mail
             &:hover
@@ -88,14 +163,62 @@ body
     &__slogan
         @include font-jost
 
-        flex-basis: 50%
+        text-align: center
         font-size: 10px
         font-weight: 400
-        line-height: 12px
+        line-height: 25px
         letter-spacing: 0.09em
         text-transform: uppercase
     &__right
         display: flex 
+        justify-content: flex-end
+        position: relative
+        &-language
+            padding-right: 15px
+        &-search
+            cursor: pointer
+            position: absolute
+            right: 103px
+            .searchform
+                position: relative
+                .search-icon
+                    position: relative
+                    &::before
+                        content: ""
+                        position: absolute
+                        width: 20px
+                        height: 20px
+                        background-image: url(../images/search-icon.svg)
+                        left: -25px
+                        top: -17px
+                        background-repeat: no-repeat
+                    &.active
+                        &::before
+                            content: ""
+                            position: absolute
+                            width: 15px
+                            height: 15px
+                            background-size: contain
+                            background-image: url(../images/close-icone.svg)
+                            left: -25px
+                            top: -17px
+                            background-repeat: no-repeat
+                            filter: invert(1)
+                input
+                    outline: 0
+                    position: relative
+                    width: 0
+                    padding: 0
+                    border: none
+                    background: #000000
+                    color: #ffffff
+                    border-bottom: 1px solid #ffffff
+                    transition: width .5s ease
+                    &::placeholder
+                        color: #ffffff
+                    &.active
+                        width: 160px
+                
 
 .header-bottom
     position: absolute
@@ -115,9 +238,16 @@ body
         &-right
                 display: flex
                 align-items: center
-                &_partners
-                    .bepartner
+                &_like
+                    a
                         margin-right: 40px
+                        color: #ffffff
+                        font-size: 17px
+                        .fa-heart
+                            transition: all .5s ease
+                        &:hover
+                            .fa-heart
+                                transform: scale(1.1)
                 &_login
                     position: relative
                     .belogin
@@ -258,9 +388,9 @@ body
         letter-spacing: 0em
         margin-bottom: 40px
     &-content
-        display: flex
-        .collection-content__wrapper + .collection-content__wrapper
-            margin-left: 18px
+        display: grid
+        grid-template-columns: repeat(4, 1fr)
+        grid-gap: 20px
         &__item
             position: relative
             overflow: hidden
@@ -306,12 +436,20 @@ body
                     font-style: normal
                     font-weight: 400
                     line-height: 23px
+                    left: 32px
                     letter-spacing: 0em
                     text-align: left
                     position: absolute
-                    left: 32px
-                    bottom: 36px
+                    bottom: 36px                
             &:hover
+                .look
+                    animation: 1s linear pulse
+                @keyframes pulse
+                    0%
+                        left: -250px 
+                    50%
+                        left:  32px
+
                 .collection-content__item-img
                     img
                         transform: scale(1)
@@ -341,12 +479,12 @@ body
 .about   
     background-repeat: no-repeat   
     height: 487px
+    background-image: url(../images/about_bg.png)
+    background-position: bottom
     .section-inner
         height: 100%
         display: flex
         align-items: center
-    &-content__fake
-        flex-basis: 12%
     &-content
         height: 100%
         flex-basis: 50%
@@ -370,7 +508,7 @@ body
     &-grid
         position: relative
         width: 83vw
-        height: 60vw
+        height: 57vw
         margin: 0 auto
         &__item
             &-content
@@ -431,25 +569,25 @@ body
                     height: 22vw
             &:nth-child(5)
                 .s-content-block
-                    bottom: 3vw
+                    bottom: 0
                     left: 0
                     width: 20vw
                     height: 26vw
             &:nth-child(6)
                 .s-content-block
-                    bottom: 3vw
+                    bottom: 0
                     left: 21vw
                     width: 20vw
                     height: 24vw
             &:nth-child(7)
                 .s-content-block
-                    bottom: 3vw
+                    bottom: 0
                     left: 42vw
                     width: 20vw
                     height: 28vw
             &:nth-child(8)
                 .s-content-block
-                    bottom: 3vw
+                    bottom: 0
                     left: 63vw
                     width: 20vw
                     height: 30vw
@@ -464,7 +602,7 @@ body
 // === upload  === 
 
 .upload
-    margin-top: 70px
+    padding-top: 70px
     &-content
         background-color: #1A1A1A
         padding-top: 35px
@@ -485,10 +623,22 @@ body
 
 // === upload end ===  
 
+@import "collection"
+@import "incollection"
+@import "projects"
+@import "profile"
+@import "product"   
+
 // === footer end ===  
+    
 
 .footer
-    margin-top: 144px
+    background-repeat: no-repeat
+    background-position: bottom
+    .section-inner
+        border-top: 1px solid #454545
+        padding-top: 74px
+        margin-top: 64px
     &-menu
         padding: 0
         margin: 0
@@ -514,6 +664,17 @@ body
         align-items: center
         justify-content: space-between
         margin-top: 43px
+        &__mobile-description
+            display: none
+            ul
+                list-style-type: none
+                padding: 0
+                margin: 0
+                font-family: Jost,sans-serif
+                font-size: 14px
+                font-style: normal
+                font-weight: 300
+                letter-spacing: 0
         &__contact
             .phone
                 font-family: Jost,sans-serif
@@ -535,11 +696,14 @@ body
                 img
                   margin-right: 10.81px
     &-copiright 
+        max-width: 1600px
+        padding-right: 15px
+        padding-left: 15px
         padding-top: 14px
-        padding-bottom: 27px
-        display: flex
-        align-items: center
-        justify-content: space-between
+        padding-bottom: 14px
+        display: grid
+        grid-template-columns: 1fr 1fr 1fr
+        margin: 0 auto
         &__adress
             ul
                 list-style-type: none
@@ -552,13 +716,21 @@ body
                 letter-spacing: 0em
         &__content
             font-family: Jost,sans-serif
+            text-align: center
             color: #545454
             font-size: 14px
             font-style: normal
             font-weight: 400
             line-height: 20px
             letter-spacing: 0em
+            display: flex
+            align-items: center
+            justify-content: center
         &__privacy
+            text-align: right
+            display: flex
+            align-items: center
+            justify-content: flex-end
             .privacy,
             .convention
                 font-family: Jost,sans-serif
@@ -569,9 +741,7 @@ body
                 line-height: 20px
                 letter-spacing: 0em
             .convention
-                margin-left: 30px
-   
+                margin-left: 30px  
+// === footer ===
 
-
-    
-// === footer ===  
+@import "responsive"
