new front-page repaui

--- a/app/sass/_responsive.sass
+++ b/app/sass/_responsive.sass
@@ -171,6 +171,8 @@
         padding-bottom: 0
         &::before
             display: none
+    .about-content p
+        font-size: 14px
     .about-content
         width: 100%
         position: relative
@@ -345,13 +347,13 @@
         margin-top: 20px
     .collection-title
         margin-bottom: 15px
-
     .footer .section-inner
         padding-top: 40px
-
     .collection-content
         grid-template-columns: repeat(2, 1fr)
         grid-gap: 14px
+     .collection-content__item-title
+         width: auto
 
     .about-content
         flex-basis: 100%
@@ -413,8 +415,6 @@
 
     .collection-content__item:hover .look
         display: none
-    .collection-content__wrapper
-        flex: 1 0 50%
     .header-top__right-search .searchform input.active
         width: 110px
     .gallery-grid
@@ -469,5 +469,7 @@
         flex-direction: column
     .footer-copiright__privacy .convention
         margin-left: 0
+    .footer-meta__mobile-description ul
+        font-size: 10px
 
   
