collection and front page

--- a/app/sass/_collection.sass
+++ b/app/sass/_collection.sass
@@ -8,7 +8,7 @@
         color: #ffffff
         font-size: 50px
         font-style: normal
-        font-weight: 200
+        font-weight: 100
         line-height: 64px
         letter-spacing: 0em
         margin-bottom: 30px
@@ -65,7 +65,7 @@
         display: block
         height: 100%
         background-color: rgba(0,0,0, .6)
-        transition: all .5s ease
+        transition: all .3s ease
         img
             position: absolute
             bottom: 66px
@@ -87,7 +87,7 @@
       .look-collection
         opacity: 1
         .look-collection__text
-          animation: 1s linear pulse
+          animation: .3s linear pulse
           @keyframes pulse
             0%
               left: -250px 
