--- a/app/sass/_responsive.sass
+++ b/app/sass/_responsive.sass
@@ -334,8 +334,12 @@
         height: auto
         padding-top: 5px
         line-height: 16.8px
+    .ceramics-title
+        line-height: 25px
     .content_two
         margin-right: 7px
+        margin-bottom: 10px
+    .content_one
         margin-bottom: 10px
     .content-three
         margin-left: 7px
@@ -460,7 +464,9 @@
     .header-top__right-search .searchform input.active
         width: 80px
     .footer-menu
-        flex-direction: column
+        column-count: 2
+        column-gap: 11%
+        display: block
     .footer-copiright__privacy .convention
         margin-left: 0
     .footer-meta__mobile-description ul
