--- a/app/sass/_responsive.sass
+++ b/app/sass/_responsive.sass
@@ -128,7 +128,7 @@
         height: 297px
     .single-project__image img
         height: 100%
-        object-fit: fill
+        object-fit: cover
     .single-project__home-left
         display: flex
         flex-basis: 50%
@@ -305,7 +305,20 @@
                 flex-direction: column
                 align-items: flex-end
                 justify-content: space-around
-            
+    .single-project__home
+        flex-direction: column
+    .single-project__gallery
+        flex-direction: column
+    .single-project__home
+        padding-bottom: 25px
+    .single-project__model-item_favorite
+        right: 8px
+        top: 8px
+    .single-project__model-item_title
+        margin-top: 8
+    .single-project__model
+        padding-bottom: 10px
+
 /* For 640 Resolution */  
 
 @media (max-width: 640px) 
