--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -48,8 +48,10 @@ body
         justify-content: space-between
         height: 90%
 
-
-
+.single-project__model-item_content-img
+    img
+        width: 100%
+        
 .breadcrumbs
     padding-top: 100px
     .kama_breadcrumbs
